--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Tue Feb 21 20:34:30 EET 2017
+#Tue Feb 21 22:33:48 EET 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task01.task0135
-javarush.last.task.path=D\:/JavaRushTasks/1.JavaSyntax/src/com/javarush/task/task01/task0135
+javarush.last.task.key=com.javarush.task.task13.task1320
 javarush.user.secretkey=17c3d0d0-ef1e-4307-9148-ce7d3267951d
+javarush.last.task.path=C\:/Users/User/IdeaProjects/JavaRushTasks/2.JavaCore/src/com/javarush/task/task13/task1320
 javarush.level.filter=ALL
