--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Thu Feb 23 17:49:05 EET 2017
+#Fri Feb 24 20:43:58 EET 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task14.task1411
-javarush.last.task.path=C\:/java/JavaRushTasks/2.JavaCore/src/com/javarush/task/task14/task1411
+javarush.last.task.key=com.javarush.task.task14.task1415
 javarush.user.secretkey=17c3d0d0-ef1e-4307-9148-ce7d3267951d
+javarush.last.task.path=D\:/JavaRushTasks/2.JavaCore/src/com/javarush/task/task14/task1415
 javarush.level.filter=ALL
