--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Sat Mar 04 14:55:22 EET 2017
+#Wed Mar 08 14:40:14 EET 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task15.task1519
-javarush.last.task.path=C\:/java/JavaRushTasks/2.JavaCore/src/com/javarush/task/task15/task1519
+javarush.last.task.key=com.javarush.task.task15.task1521
+javarush.last.task.path=D\:/JavaRushTasks/2.JavaCore/src/com/javarush/task/task15/task1521
 javarush.user.secretkey=17c3d0d0-ef1e-4307-9148-ce7d3267951d
 javarush.level.filter=ALL
