--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Tue Mar 14 18:55:58 EET 2017
+#Wed Mar 15 15:29:16 EET 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task16.task1615
+javarush.last.task.key=com.javarush.task.task16.task1617
 javarush.user.secretkey=17c3d0d0-ef1e-4307-9148-ce7d3267951d
-javarush.last.task.path=C\:/Users/User/Desktop/JavaRushTasks/2.JavaCore/src/com/javarush/task/task16/task1615
+javarush.last.task.path=D\:/JavaRushTasks/2.JavaCore/src/com/javarush/task/task16/task1617
 javarush.level.filter=ALL
