--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Wed Mar 15 15:29:16 EET 2017
+#Wed Mar 15 22:25:19 EET 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task16.task1617
+javarush.last.task.key=com.javarush.task.task16.task1622
 javarush.user.secretkey=17c3d0d0-ef1e-4307-9148-ce7d3267951d
-javarush.last.task.path=D\:/JavaRushTasks/2.JavaCore/src/com/javarush/task/task16/task1617
+javarush.last.task.path=C\:/Users/Vovan4ik/IdeaProjects/JavaRushTasks/2.JavaCore/src/com/javarush/task/task16/task1622
 javarush.level.filter=ALL
