--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Wed Apr 19 22:15:41 EEST 2017
+#Thu Apr 20 17:10:37 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task16.task1633
-javarush.last.task.path=D\:/JavaRushTasks/2.JavaCore/src/com/javarush/task/task16/task1633
+javarush.last.task.key=com.javarush.task.task17.task1709
+javarush.last.task.path=C\:/Users/User/Desktop/Java/JavaRushTasks/2.JavaCore/src/com/javarush/task/task17/task1709
 javarush.user.secretkey=17c3d0d0-ef1e-4307-9148-ce7d3267951d
 javarush.level.filter=ALL
