--- a/JavaRushPlugin.properties
+++ b/JavaRushPlugin.properties
@@ -1,8 +1,8 @@
-#Sun Aug 20 21:02:48 MSK 2017
+#Wed Aug 30 20:38:33 EEST 2017
 javarush.query.filter=
 javarush.quest.filter=ALL_QUESTS
 javarush.status.filter=ASSIGNED
-javarush.last.task.key=com.javarush.task.task08.task0818
+javarush.last.task.key=com.javarush.task.task18.task1805
 javarush.user.secretkey=17c3d0d0-ef1e-4307-9148-ce7d3267951d
-javarush.last.task.path=C\:/Users/Vladimir/IdeaProjects/JavaRushTasks/1.JavaSyntax/src/com/javarush/task/task08/task0818
+javarush.last.task.path=C\:/Users/vrarena1603/IdeaProjects/JavaRushTasks/2.JavaCore/src/com/javarush/task/task18/task1805
 javarush.level.filter=ALL
